# QicongBigdata

./: IcebergDemo.py
EMR/: IcebergDemo.py  SparkTest.py
EMR/Flink/: flink_demo.py  flink_sql_demo.py
EMR/HIVE/: ATHENA_COMPATIBILITY_FIX.md  CreateTable.sql  LoadPartitions.sql  generate_allan_sale_ods.py  generate_dim_product_category.py  generate_dim_promotion.py  generate_dim_user_province.py
EMR/Iceberg/: IcebergDemo.py
EMR/Spark/: Spark_ods_dwd.py  Spark_oom_trigger.py
EMR/kafka/: kafka_consumer.py  kafka_producer.py  kafka_sasl_producer.py
EMRServerless/: IcebergDemo.py
TestMCP/: clientTest.py  serverTest.py
flink-mcp/: pyproject.toml
flink-mcp/src/flink_mcp_server/: __init__.py
